--- a/src/beer-banner.html
+++ b/src/beer-banner.html
@@ -48,7 +48,7 @@
                 '_watchPlacePhotos(googlePhoto)'],
 
       _orgIdChanged: function (newId, oldId){
-        // console.log(newId, oldId)
+        console.log(newId, oldId)
         if(newId !== oldId){
           this.photoUrl = null;
           this.placeholder=null;
