--- a/src/beer-login.html
+++ b/src/beer-login.html
@@ -224,7 +224,8 @@
         },
 
         email:{
-            type: String
+            type: String,
+            value:''
         },
 
         emailToggle:{
