--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       color: #202020;
       padding: 0 16px;
       overflow: visible;
+      background-image: url("/images/beer-icon-180.png");
+      background-repeat:   no-repeat;
+      background-position: center center;  
+      border-radius: 50%; 
     }
 
   </style>
@@ -62,6 +66,7 @@
 <body>
 
   <beer-app unresolved>Beer-Fly</beer-app>
+  
  
 
   <!--<script src="https://js.stripe.com/v3/"></script>-->
