--- a/src/beer-icons.html
+++ b/src/beer-icons.html
@@ -63,6 +63,8 @@
             <g id="view-all"><path d="M4 18h17v-6H4v6zM4 5v6h17V5H4z"/></g>
             <g id="arrow-downward"><path d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"/></g>
             <g id="arrow-upward"><path d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"/></g>
+            <g id="exit-to-app"><path d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"/></g>
+            <g id="send"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></g>
 
         </defs>
     </svg>
