intermediate upate - includes favorite/rating

--- a/src/beer-contact-card.html
+++ b/src/beer-contact-card.html
@@ -10,6 +10,12 @@
     
     <style include="paper-material-styles">
 
+    :host {
+      display: block;
+      max-width: 640px;
+      background-color: white;
+    }
+
     a{
       color: var(--app-primary-color);
       text-decoration: none;
