--- a/src/beer-foodtruck-card.html
+++ b/src/beer-foodtruck-card.html
@@ -35,6 +35,8 @@
         margin: 10px;
         padding: 20px;
         @apply --paper-material-elevation-1;
+        background-color: white;
+
       }
 
       .motto {
