--- a/src/beer-location.html
+++ b/src/beer-location.html
@@ -42,7 +42,7 @@
       --paper-progress-disabled-active-color: white;
       --paper-progress-disabled-secondary-color: white;
       --paper-progress-height: 1px;
-      
+      background-color:white;
      
       margin: 15px 10px;
       @apply --paper-material-elevation-1;
