--- a/src/beer-beer-card.html
+++ b/src/beer-beer-card.html
@@ -34,11 +34,13 @@
         text-decoration: none;
         }
 
-      .card{
+       .card{
         margin: 10px;
         padding: 20px;
         @apply --paper-material-elevation-1;
-      }
+        background-color: white;
+
+      } 
       
 
        
