--- a/src/beer-beer.html
+++ b/src/beer-beer.html
@@ -32,6 +32,8 @@
       :host {
         display: block;
         max-width: 640px;
+        background-color: var(--app-background-color);
+
       }
       
 
@@ -48,9 +50,9 @@
         margin: 10px;
         padding: 20px;
         @apply --paper-material-elevation-1;
+        background-color: white;
+
       }
-
-
 
       .description {
         font-size: 1.2em;
