--- a/src/beer-dialog.html
+++ b/src/beer-dialog.html
@@ -28,14 +28,16 @@
        margin:0 3vw;
        bottom:0;
        left:0;
-       max-width: 400px;
+       background-color: transparent;
+       
      }
 
 
      .dialog > div{
-      margin: 10px 0; 
+       margin:10px auto;
        padding: 10px;
        background-color: white;
+       max-width: 400px;
      }
 
      .edit{
