--- a/src/beer-favorite-crawl.html
+++ b/src/beer-favorite-crawl.html
@@ -68,6 +68,7 @@
       padding: 12px;
       margin: 15px;
       @apply --paper-material-elevation-1;
+      background-color: white;
     }
 
     .title-wrapper{
@@ -150,14 +151,6 @@
           </iron-label>
         </a>
       </div>
-    <div>
-      <a href="/home/crawl/mine">
-        <iron-label>
-          <paper-icon-button class="add-icon" icon="beer-icons:account"></paper-icon-button>
-            <span class="crawl-message">Go to my Beer-Crawls</span>
-        </iron-label>
-      </a>
-    </div>
     </div>
 
        <template is="dom-repeat" items="[[crawlData]]" as="crawl" sort="_sortByNew" observe="created">
