--- a/src/beer-foodtruck.html
+++ b/src/beer-foodtruck.html
@@ -27,6 +27,7 @@
       :host {
         display: block;
         max-width: 640px;
+        background-color: var(--app-background-color);
       }
       
       a{
@@ -43,6 +44,8 @@
         margin: 10px;
         padding: 20px;
         @apply --paper-material-elevation-1;
+        background-color: white;
+
       }
 
       .motto {
