--- a/src/beer-pub-card.html
+++ b/src/beer-pub-card.html
@@ -26,6 +26,7 @@
       :host {
         display: block;
         position: relative;
+        background-color: white;
       }
 
       a{
@@ -33,10 +34,7 @@
         text-decoration: none;
       }
 
-      .card{
-         @apply --paper-material-elevation-1;
-        margin: 15px 10px; 
-      }
+     
 
       .card-wrapper{
         @apply --layout-horizontal;
