--- a/src/beer-search.html
+++ b/src/beer-search.html
@@ -28,6 +28,7 @@
       :host {
         display: block;
         max-width: 640px;
+        
       }
 
      a{
@@ -39,6 +40,7 @@
       padding: 10px;
       margin: 10px;
       @apply --paper-material-elevation-1;
+      background-color: white;
     }
 
    
