--- a/src/beer-tap.html
+++ b/src/beer-tap.html
@@ -33,6 +33,8 @@
       :host {
         display: block;
         max-width: 640px;
+        background-color: var(--app-background-color);
+
       }
 
       a{
@@ -46,6 +48,8 @@
         margin: 10px;
         padding: 20px;
         @apply --paper-material-elevation-1;
+        background-color: white;
+
       }
 
       .checkbox-wrapper{
