--- a/src/lazy-resources.html
+++ b/src/lazy-resources.html
@@ -21,5 +21,7 @@
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-swatch-picker/paper-swatch-picker.html"> 
+
 
 <link rel="import" href="../bower_components/neon-animation/web-animations.html">
