--- a/src/beer-crawl-edit.html
+++ b/src/beer-crawl-edit.html
@@ -35,6 +35,10 @@
     a > iron-icon {
       text-decoration: none;
     }
+    paper-tabs {
+      --paper-tab-ink: var(--app-secondary-color);
+      --paper-tabs-selection-bar-color: var(--app-accent-color);
+    }
 
     .dialog{
       @apply --layout-vertical;
