--- a/src/beer-beer-card-mini.html
+++ b/src/beer-beer-card-mini.html
@@ -74,7 +74,7 @@
     </style>
 
 
-    <a href="/[[nameUrl]]/description?orgid=[[orgId]]&beerId=[[beerId]]">
+    <a href$="/[[nameUrl]]/description?orgid=[[orgId]]&beerId=[[beerId]]">
       <div class='card' animated-shadow="false">
         <div>
             <div>
@@ -111,6 +111,8 @@
           type: String,
          
         },
+
+        beerId:String,
 
         beerName:{
           type: String
